Update to kernel & reflect 2.2.0-SNAPSHOT
git-svn-id: https://anonsvn.jboss.org/repos/jbossas/projects/jboss-osgi/projects/runtime/deployment/trunk@97879 84be2c1e-ba19-0410-b317-a758671a6fc1

--- a/pom.xml
+++ b/pom.xml
@@ -54,10 +54,13 @@
       <artifactId>jboss-osgi-spi</artifactId>
       <version>${version.jboss.osgi.spi}</version>
     </dependency>
+    
+    <!-- Provided Dependencies -->
     <dependency>
       <groupId>org.jboss.deployers</groupId>
       <artifactId>jboss-deployers-vfs</artifactId>
       <version>${version.jboss.deployers}</version>
+      <scope>provided</scope>
     </dependency>
 
     <!-- OSGi Dependencies -->
