--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
   
   <!-- Properties -->
   <properties>
-    <version.jboss.deployers>2.0.9.GA</version.jboss.deployers>
+    <version.jboss.deployers>2.2.0-SNAPSHOT</version.jboss.deployers>
     <version.jboss.osgi.spi>1.0.4-SNAPSHOT</version.jboss.osgi.spi>
     <version.osgi>4.2.0</version.osgi>
   </properties>
