--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
   <artifactId>jboss-osgi-deployment</artifactId>
   <packaging>jar</packaging>
 
-  <version>1.0.1-SNAPSHOT</version>
+  <version>1.0.1</version>
 
   <!-- Parent -->
   <parent>
@@ -31,15 +31,15 @@
 
   <!-- Subversion -->
   <scm>
-    <connection>scm:svn:http://anonsvn.jboss.org/repos/jbossas/projects/jboss-osgi/projects/runtime/deployment/trunk</connection>
-    <developerConnection>scm:svn:https://svn.jboss.org/repos/jbossas/projects/jboss-osgi/projects/runtime/deployment/trunk</developerConnection>
-    <url>http://fisheye.jboss.com/qsearch/JBossOSGi</url>
+    <connection>scm:svn:http://anonsvn.jboss.org/repos/jbossas/projects/jboss-osgi/projects/runtime/deployment/tags/jboss-osgi-deployment-1.0.1</connection>
+    <developerConnection>scm:svn:https://svn.jboss.org/repos/jbossas/projects/jboss-osgi/projects/runtime/deployment/tags/jboss-osgi-deployment-1.0.1</developerConnection>
+    <url>http://fisheye.jboss.com/qsearch/JBossOSGi/tags/jboss-osgi-deployment-1.0.1</url>
   </scm>
   
   <!-- Properties -->
   <properties>
     <version.jboss.deployers>2.2.0.Alpha1</version.jboss.deployers>
-    <version.jboss.osgi.spi>1.0.4-SNAPSHOT</version.jboss.osgi.spi>
+    <version.jboss.osgi.spi>1.0.4</version.jboss.osgi.spi>
     <version.osgi>4.2.0</version.osgi>
   </properties>
 
