--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
   <artifactId>jboss-osgi-deployment</artifactId>
   <packaging>jar</packaging>
 
-  <version>1.0.1</version>
+  <version>1.0.2-SNAPSHOT</version>
 
   <!-- Parent -->
   <parent>
@@ -31,9 +31,9 @@
 
   <!-- Subversion -->
   <scm>
-    <connection>scm:svn:http://anonsvn.jboss.org/repos/jbossas/projects/jboss-osgi/projects/runtime/deployment/tags/jboss-osgi-deployment-1.0.1</connection>
-    <developerConnection>scm:svn:https://svn.jboss.org/repos/jbossas/projects/jboss-osgi/projects/runtime/deployment/tags/jboss-osgi-deployment-1.0.1</developerConnection>
-    <url>http://fisheye.jboss.com/qsearch/JBossOSGi/tags/jboss-osgi-deployment-1.0.1</url>
+    <connection>scm:svn:http://anonsvn.jboss.org/repos/jbossas/projects/jboss-osgi/projects/runtime/deployment/trunk</connection>
+    <developerConnection>scm:svn:https://svn.jboss.org/repos/jbossas/projects/jboss-osgi/projects/runtime/deployment/trunk</developerConnection>
+    <url>http://fisheye.jboss.com/qsearch/JBossOSGi</url>
   </scm>
   
   <!-- Properties -->
