--- a/pom.xml
+++ b/pom.xml
@@ -38,8 +38,8 @@
   
   <!-- Properties -->
   <properties>
-    <version.jboss.deployers>2.2.0.Alpha1</version.jboss.deployers>
     <version.jboss.osgi.spi>1.0.5-SNAPSHOT</version.jboss.osgi.spi>
+    <version.jboss.osgi.vfs>1.0.0-SNAPSHOT</version.jboss.osgi.vfs>
     <version.osgi>4.2.0</version.osgi>
   </properties>
 
@@ -55,14 +55,6 @@
       <version>${version.jboss.osgi.spi}</version>
     </dependency>
     
-    <!-- Provided Dependencies -->
-    <dependency>
-      <groupId>org.jboss.deployers</groupId>
-      <artifactId>jboss-deployers-vfs</artifactId>
-      <version>${version.jboss.deployers}</version>
-      <scope>provided</scope>
-    </dependency>
-
     <!-- OSGi Dependencies -->
     <dependency>
       <groupId>org.osgi</groupId>
@@ -78,6 +70,12 @@
     </dependency>
 
     <!-- Test Dependecies -->
+    <dependency>
+      <groupId>org.jboss.osgi.vfs</groupId>
+      <artifactId>jboss-osgi-vfs21</artifactId>
+      <version>${version.jboss.osgi.vfs}</version>
+      <scope>test</scope>
+    </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
