Use dedicated groupId
git-svn-id: https://anonsvn.jboss.org/repos/jbossas/projects/jboss-osgi/projects/runtime/deployment/trunk@102654 84be2c1e-ba19-0410-b317-a758671a6fc1

--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 
   <name>JBossOSGi Reactor - Deployment</name>
 
-  <groupId>org.jboss.osgi.runtime</groupId>
+  <groupId>org.jboss.osgi.deployment</groupId>
   <artifactId>jboss-osgi-deployment</artifactId>
   <packaging>jar</packaging>
 
