--- a/pom.xml
+++ b/pom.xml
@@ -38,8 +38,8 @@
   
   <!-- Properties -->
   <properties>
-    <version.jboss.osgi.spi>1.0.9-SNAPSHOT</version.jboss.osgi.spi>
-    <version.jboss.osgi.vfs>1.0.1-SNAPSHOT</version.jboss.osgi.vfs>
+    <version.jboss.osgi.spi>1.0.10-SNAPSHOT</version.jboss.osgi.spi>
+    <version.jboss.osgi.vfs>1.0.0</version.jboss.osgi.vfs>
     <version.osgi>4.2.0</version.osgi>
   </properties>
 
