--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
   
   <!-- Properties -->
   <properties>
-    <version.jboss.osgi.spi>1.0.10</version.jboss.osgi.spi>
+    <version.jboss.osgi.spi>1.0.11-SNAPSHOT</version.jboss.osgi.spi>
     <version.jboss.osgi.vfs>1.0.0</version.jboss.osgi.vfs>
     <version.osgi>4.2.0</version.osgi>
   </properties>
