--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
   <parent>
     <groupId>org.jboss.osgi</groupId>
     <artifactId>jboss-osgi-parent</artifactId>
-    <version>1.0.9-SNAPSHOT</version>
+    <version>1.0.9</version>
   </parent>
 
   <!-- Source Control -->
@@ -38,7 +38,7 @@
   
   <!-- Properties -->
   <properties>
-    <version.jboss.osgi.spi>1.0.11-SNAPSHOT</version.jboss.osgi.spi>
+    <version.jboss.osgi.spi>1.0.11</version.jboss.osgi.spi>
     <version.jboss.osgi.vfs>1.0.0</version.jboss.osgi.vfs>
     <version.osgi>4.2.0</version.osgi>
   </properties>
