--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
   <artifactId>jboss-osgi-deployment</artifactId>
   <packaging>jar</packaging>
 
-  <version>1.0.4</version>
+  <version>1.0.5-SNAPSHOT</version>
 
   <!-- Parent -->
   <parent>
