--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
   <artifactId>jboss-osgi-deployment</artifactId>
   <packaging>jar</packaging>
 
-  <version>1.0.7-SNAPSHOT</version>
+  <version>1.0.7</version>
 
   <!-- Parent -->
   <parent>
