--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
   <name>JBossOSGi Deployment</name>
 
   <groupId>org.jboss.osgi.deployment</groupId>
-  <artifactId>jboss-osgi-deployment</artifactId>
+  <artifactId>jbosgi-deployment</artifactId>
   <packaging>jar</packaging>
 
   <version>1.0.9-SNAPSHOT</version>
@@ -36,7 +36,7 @@
   
   <!-- Properties -->
   <properties>
-    <version.jboss.osgi.spi>1.0.17</version.jboss.osgi.spi>
+    <version.jboss.osgi.spi>1.0.19-SNAPSHOT</version.jboss.osgi.spi>
     <version.jboss.osgi.vfs>1.0.4</version.jboss.osgi.vfs>
     <version.osgi>4.2.0</version.osgi>
   </properties>
@@ -44,8 +44,8 @@
   <!-- Dependencies -->
   <dependencies>
     <dependency>
-      <groupId>org.jboss.osgi</groupId>
-      <artifactId>jboss-osgi-spi</artifactId>
+      <groupId>org.jboss.osgi.spi</groupId>
+      <artifactId>jbosgi-spi</artifactId>
       <version>${version.jboss.osgi.spi}</version>
     </dependency>
     
