[maven-release-plugin] prepare release 1.0.9

--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
   <artifactId>jbosgi-deployment</artifactId>
   <packaging>jar</packaging>
 
-  <version>1.0.9-SNAPSHOT</version>
+  <version>1.0.9</version>
 
   <!-- Parent -->
   <parent>
