Allow 'null' bundle symbolic name

--- a/pom.xml
+++ b/pom.xml
@@ -36,8 +36,8 @@
   
   <!-- Properties -->
   <properties>
-    <version.jboss.osgi.spi>1.0.19</version.jboss.osgi.spi>
-    <version.jboss.osgi.vfs>1.0.4</version.jboss.osgi.vfs>
+    <version.jboss.osgi.spi>1.0.22-SNAPSHOT</version.jboss.osgi.spi>
+    <version.jboss.osgi.vfs>1.0.5</version.jboss.osgi.vfs>
     <version.osgi>4.2.0</version.osgi>
   </properties>
 
@@ -60,7 +60,7 @@
     <!-- Test Dependecies -->
     <dependency>
       <groupId>org.jboss.osgi.vfs</groupId>
-      <artifactId>jboss-osgi-vfs30</artifactId>
+      <artifactId>jbosgi-vfs30</artifactId>
       <version>${version.jboss.osgi.vfs}</version>
       <scope>test</scope>
     </dependency>
