--- a/pom.xml
+++ b/pom.xml
@@ -1,91 +1,101 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-  <!-- ====================================================================== -->
-  <!--                                                                        -->
-  <!--  JBoss, the OpenSource J2EE webOS                                      -->
-  <!--                                                                        -->
-  <!--  Distributable under LGPL license.                                     -->
-  <!--  See terms of license at http://www.gnu.org.                           -->
-  <!--                                                                        -->
-  <!-- ====================================================================== -->
+<!-- ====================================================================== -->
+<!--                                                                        -->
+<!--  JBoss, the OpenSource J2EE webOS                                      -->
+<!--                                                                        -->
+<!--  Distributable under LGPL license.                                     -->
+<!--  See terms of license at http://www.gnu.org.                           -->
+<!--                                                                        -->
+<!-- ====================================================================== -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-  <name>JBossOSGi Deployment</name>
+    <!-- Parent -->
+    <parent>
+        <groupId>org.jboss.osgi</groupId>
+        <artifactId>jboss-osgi-parent</artifactId>
+        <version>1.0.15</version>
+    </parent>
 
-  <groupId>org.jboss.osgi.deployment</groupId>
-  <artifactId>jbosgi-deployment</artifactId>
-  <packaging>jar</packaging>
+    <name>JBossOSGi Deployment</name>
 
-  <version>1.0.11-SNAPSHOT</version>
+    <groupId>org.jboss.osgi.deployment</groupId>
+    <artifactId>jbosgi-deployment</artifactId>
+    <packaging>jar</packaging>
 
-  <!-- Parent -->
-  <parent>
-    <groupId>org.jboss.osgi</groupId>
-    <artifactId>jboss-osgi-parent</artifactId>
-    <version>1.0.9</version>
-  </parent>
+    <version>1.0.11-SNAPSHOT</version>
 
-  <!-- Source Control -->
-  <scm>
-    <connection>scm:git:git://github.com/jbosgi/jbosgi-deployment.git</connection>
-    <developerConnection>scm:git:git@github.com:jbosgi/jbosgi-deployment.git</developerConnection>
-    <url>http://github.com/jbosgi/jbosgi-deployment</url>
-  </scm>
-  
-  <!-- Properties -->
-  <properties>
-    <version.jboss.osgi.spi>1.0.22</version.jboss.osgi.spi>
-    <version.jboss.osgi.vfs>1.0.5</version.jboss.osgi.vfs>
-    <version.osgi>4.2.0</version.osgi>
-  </properties>
+    <!-- Source Control -->
+    <scm>
+        <connection>scm:git:git://github.com/jbosgi/jbosgi-deployment.git</connection>
+        <developerConnection>scm:git:git@github.com:jbosgi/jbosgi-deployment.git</developerConnection>
+        <url>http://github.com/jbosgi/jbosgi-deployment</url>
+    </scm>
 
-  <!-- Dependencies -->
-  <dependencies>
-    <dependency>
-      <groupId>org.jboss.osgi.spi</groupId>
-      <artifactId>jbosgi-spi</artifactId>
-      <version>${version.jboss.osgi.spi}</version>
-    </dependency>
-    
-    <!-- OSGi Dependencies -->
-    <dependency>
-      <groupId>org.osgi</groupId>
-      <artifactId>org.osgi.core</artifactId>
-      <version>${version.osgi}</version>
-      <scope>provided</scope>
-    </dependency>
+    <!-- Properties -->
+    <properties>
+        <version.jboss.osgi.spi>3.0.0</version.jboss.osgi.spi>
+        <version.jboss.osgi.testing>1.0.0</version.jboss.osgi.testing>
+        <version.jboss.osgi.vfs>1.0.6</version.jboss.osgi.vfs>
+        <version.junit>4.10</version.junit>
+        <version.osgi>4.2.0</version.osgi>
+    </properties>
 
-    <!-- Test Dependecies -->
-    <dependency>
-      <groupId>org.jboss.osgi.vfs</groupId>
-      <artifactId>jbosgi-vfs30</artifactId>
-      <version>${version.jboss.osgi.vfs}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
+    <!-- Dependencies -->
+    <dependencies>
+        <dependency>
+            <groupId>org.jboss.osgi.spi</groupId>
+            <artifactId>jbosgi-spi</artifactId>
+            <version>${version.jboss.osgi.spi}</version>
+        </dependency>
 
-  <!-- Build -->
-  <build>
-    <plugins>
-      <plugin>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <configuration>
-          <systemProperties>
-            <property>
-              <name>log4j.output.dir</name>
-              <value>${project.build.directory}</value>
-            </property>
-          </systemProperties>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
+        <!-- OSGi Dependencies -->
+        <dependency>
+            <groupId>org.osgi</groupId>
+            <artifactId>org.osgi.core</artifactId>
+            <version>${version.osgi}</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <!-- Test Dependecies -->
+        <dependency>
+            <groupId>org.jboss.osgi.testing</groupId>
+            <artifactId>jbosgi-testing</artifactId>
+            <version>${version.jboss.osgi.testing}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.osgi.vfs</groupId>
+            <artifactId>jbosgi-vfs30</artifactId>
+            <version>${version.jboss.osgi.vfs}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${version.junit}</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+
+    <!-- Build -->
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <systemProperties>
+                        <property>
+                            <name>log4j.output.dir</name>
+                            <value>${project.build.directory}</value>
+                        </property>
+                    </systemProperties>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
