--- a/pom.xml
+++ b/pom.xml
@@ -36,9 +36,9 @@
 
     <!-- Properties -->
     <properties>
-        <version.jboss.osgi.spi>3.0.0</version.jboss.osgi.spi>
-        <version.jboss.osgi.testing>1.0.0</version.jboss.osgi.testing>
-        <version.jboss.osgi.vfs>1.0.6</version.jboss.osgi.vfs>
+        <version.jboss.osgi.spi>3.0.1.Final</version.jboss.osgi.spi>
+        <version.jboss.osgi.testing>1.0.3.Final</version.jboss.osgi.testing>
+        <version.jboss.osgi.vfs>1.0.7.Final</version.jboss.osgi.vfs>
         <version.junit>4.10</version.junit>
         <version.osgi>4.2.0</version.osgi>
     </properties>
