--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
     <parent>
         <groupId>org.jboss.osgi</groupId>
         <artifactId>jboss-osgi-parent</artifactId>
-        <version>1.0.15</version>
+        <version>1.0.18</version>
     </parent>
 
     <name>JBossOSGi Deployment</name>
@@ -25,7 +25,7 @@
     <artifactId>jbosgi-deployment</artifactId>
     <packaging>jar</packaging>
 
-    <version>1.0.13-SNAPSHOT</version>
+    <version>1.1.0-SNAPSHOT</version>
 
     <!-- Source Control -->
     <scm>
@@ -36,9 +36,10 @@
 
     <!-- Properties -->
     <properties>
-        <version.jboss.osgi.spi>3.0.1.Final</version.jboss.osgi.spi>
+        <version.jboss.logging.processor>1.0.0.Final</version.jboss.logging.processor>
+        <version.jboss.logmanager>1.2.2.GA</version.jboss.logmanager>
+        <version.jboss.osgi.spi>3.1.0-SNAPSHOT</version.jboss.osgi.spi>
         <version.jboss.osgi.testing>1.0.3.Final</version.jboss.osgi.testing>
-        <version.jboss.osgi.vfs>1.0.7.Final</version.jboss.osgi.vfs>
         <version.junit>4.10</version.junit>
         <version.osgi>4.2.0</version.osgi>
     </properties>
@@ -51,25 +52,31 @@
             <version>${version.jboss.osgi.spi}</version>
         </dependency>
 
-        <!-- OSGi Dependencies -->
+        <!-- Provided Dependencies -->
         <dependency>
             <groupId>org.osgi</groupId>
             <artifactId>org.osgi.core</artifactId>
             <version>${version.osgi}</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.jboss.logging</groupId>
+            <artifactId>jboss-logging-processor</artifactId>
+            <version>${version.jboss.logging.processor}</version>
+            <scope>provided</scope>
+        </dependency>
 
         <!-- Test Dependecies -->
+        <dependency>
+            <groupId>org.jboss.logmanager</groupId>
+            <artifactId>jboss-logmanager</artifactId>
+            <version>${version.jboss.logmanager}</version>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>org.jboss.osgi.testing</groupId>
             <artifactId>jbosgi-testing</artifactId>
             <version>${version.jboss.osgi.testing}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.jboss.osgi.vfs</groupId>
-            <artifactId>jbosgi-vfs30</artifactId>
-            <version>${version.jboss.osgi.vfs}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -86,12 +93,11 @@
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <systemProperties>
-                        <property>
-                            <name>log4j.output.dir</name>
-                            <value>${project.build.directory}</value>
-                        </property>
-                    </systemProperties>
+                    <systemPropertyVariables>
+                        <java.io.tmpdir>${project.build.directory}</java.io.tmpdir>
+                        <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
+                        <jboss.osgi.vfs.leakDebugging>true</jboss.osgi.vfs.leakDebugging>
+                    </systemPropertyVariables>
                 </configuration>
             </plugin>
         </plugins>
