--- a/pom.xml
+++ b/pom.xml
@@ -36,10 +36,10 @@
 
     <!-- Properties -->
     <properties>
-        <version.jboss.logging.processor>1.0.0.Final</version.jboss.logging.processor>
         <version.jboss.logmanager>1.2.2.GA</version.jboss.logmanager>
-        <version.jboss.osgi.spi>3.1.0-SNAPSHOT</version.jboss.osgi.spi>
-        <version.jboss.osgi.testing>1.0.3.Final</version.jboss.osgi.testing>
+        <version.jboss.logging.processor>1.0.0.Final</version.jboss.logging.processor>
+        <version.jboss.osgi.spi>3.1.0.CR1</version.jboss.osgi.spi>
+        <version.jboss.osgi.testing>1.0.4</version.jboss.osgi.testing>
         <version.junit>4.10</version.junit>
         <version.osgi>4.2.0</version.osgi>
     </properties>
