--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
     <properties>
         <version.jboss.logmanager>1.2.2.GA</version.jboss.logmanager>
         <version.jboss.logging.processor>1.0.0.Final</version.jboss.logging.processor>
-        <version.jboss.osgi.spi>3.1.0.CR1</version.jboss.osgi.spi>
+        <version.jboss.osgi.spi>3.1.0.Final</version.jboss.osgi.spi>
         <version.jboss.osgi.testing>1.0.4</version.jboss.osgi.testing>
         <version.junit>4.10</version.junit>
         <version.osgi>4.2.0</version.osgi>
