--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
     <parent>
         <groupId>org.jboss.osgi</groupId>
         <artifactId>jbosgi-parent</artifactId>
-        <version>1.0.22</version>
+        <version>1.0.23</version>
     </parent>
 
     <name>JBossOSGi Deployment</name>
@@ -25,7 +25,7 @@
     <artifactId>jbosgi-deployment</artifactId>
     <packaging>jar</packaging>
 
-    <version>1.1.2-SNAPSHOT</version>
+    <version>1.2.0.CR1-SNAPSHOT</version>
 
     <!-- Source Control -->
     <scm>
@@ -37,8 +37,8 @@
     <!-- Properties -->
     <properties>
         <version.jboss.logmanager>1.2.2.GA</version.jboss.logmanager>
-        <version.jboss.logging.processor>1.0.0.Final</version.jboss.logging.processor>
-        <version.jboss.osgi.spi>3.1.0.Final</version.jboss.osgi.spi>
+        <version.jboss.logging.processor>1.0.3.Final</version.jboss.logging.processor>
+        <version.jboss.osgi.spi>3.1.1.CR6</version.jboss.osgi.spi>
         <version.jboss.osgi.testing>1.0.4</version.jboss.osgi.testing>
         <version.junit>4.10</version.junit>
         <version.osgi>4.2.0</version.osgi>
@@ -56,6 +56,12 @@
         <dependency>
             <groupId>org.osgi</groupId>
             <artifactId>org.osgi.core</artifactId>
+            <version>${version.osgi}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.osgi</groupId>
+            <artifactId>org.osgi.compendium</artifactId>
             <version>${version.osgi}</version>
             <scope>provided</scope>
         </dependency>
