--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
     <artifactId>jbosgi-deployment</artifactId>
     <packaging>jar</packaging>
 
-    <version>1.2.0.CR2-SNAPSHOT</version>
+    <version>2.0.0.Alpha1-SNAPSHOT</version>
 
     <!-- Source Control -->
     <scm>
@@ -36,12 +36,14 @@
 
     <!-- Properties -->
     <properties>
-        <version.jboss.logmanager>1.2.2.GA</version.jboss.logmanager>
-        <version.jboss.logging.processor>1.0.3.Final</version.jboss.logging.processor>
-        <version.jboss.osgi.spi>3.1.1.CR6</version.jboss.osgi.spi>
-        <version.jboss.osgi.testing>1.0.4</version.jboss.osgi.testing>
+        <version.jboss.logging>3.1.2.GA</version.jboss.logging>
+        <version.jboss.logmanager>1.4.0.Beta1</version.jboss.logmanager>
+        <version.jboss.logging.processor>1.1.0.Beta1</version.jboss.logging.processor>
+        <version.jboss.osgi.spi>4.0.0.Alpha1</version.jboss.osgi.spi>
+        <version.jboss.osgi.testing>2.0.0.Alpha1</version.jboss.osgi.testing>
         <version.junit>4.10</version.junit>
-        <version.osgi>4.2.0</version.osgi>
+        <version.mockito>1.8.5</version.mockito>
+        <version.osgi>5.0.0</version.osgi>
     </properties>
 
     <!-- Dependencies -->
@@ -56,12 +58,6 @@
         <dependency>
             <groupId>org.osgi</groupId>
             <artifactId>org.osgi.core</artifactId>
-            <version>${version.osgi}</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.osgi</groupId>
-            <artifactId>org.osgi.compendium</artifactId>
             <version>${version.osgi}</version>
             <scope>provided</scope>
         </dependency>
@@ -89,6 +85,12 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>${version.junit}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>${version.mockito}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
