--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
     <artifactId>jbosgi-deployment</artifactId>
     <packaging>jar</packaging>
 
-    <version>1.2.1.Final-SNAPSHOT</version>
+    <version>1.3.0-SNAPSHOT</version>
 
     <!-- Source Control -->
     <scm>
@@ -36,8 +36,8 @@
 
     <!-- Properties -->
     <properties>
-        <version.jboss.logmanager>1.2.2.GA</version.jboss.logmanager>
-        <version.jboss.logging.processor>1.0.3.Final</version.jboss.logging.processor>
+        <version.jboss.logmanager>1.4.0.Beta1</version.jboss.logmanager>
+        <version.jboss.logging.processor>1.1.0.Beta1</version.jboss.logging.processor>
         <version.jboss.osgi.spi>3.2.0.Final</version.jboss.osgi.spi>
         <version.jboss.osgi.testing>1.1.0.Final</version.jboss.osgi.testing>
         <version.junit>4.10</version.junit>
