--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
     <artifactId>jbosgi-deployment</artifactId>
     <packaging>jar</packaging>
 
-    <version>1.3.0.Final</version>
+    <version>1.3.1-SNAPSHOT</version>
 
     <!-- Source Control -->
     <scm>
