--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
     <artifactId>jbosgi-deployment</artifactId>
     <packaging>jar</packaging>
 
-    <version>2.0.0.CR4</version>
+    <version>2.0.0.CR5-SNAPSHOT</version>
 
     <!-- Source Control -->
     <scm>
