--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
     <parent>
         <groupId>org.jboss.osgi</groupId>
         <artifactId>jbosgi-parent</artifactId>
-        <version>1.0.23</version>
+        <version>1.0.24</version>
     </parent>
 
     <name>JBossOSGi Deployment</name>
@@ -39,8 +39,8 @@
         <version.jboss.logging>3.1.3.GA</version.jboss.logging>
         <version.jboss.logmanager>1.4.1.Final</version.jboss.logmanager>
         <version.jboss.logging.processor>1.1.0.Final</version.jboss.logging.processor>
-        <version.jboss.osgi.spi>4.0.0.CR2</version.jboss.osgi.spi>
-        <version.jboss.osgi.testing>2.0.0.CR2</version.jboss.osgi.testing>
+        <version.jboss.osgi.spi>4.0.0.Final</version.jboss.osgi.spi>
+        <version.jboss.osgi.testing>2.0.0.Final</version.jboss.osgi.testing>
         <version.junit>4.10</version.junit>
         <version.mockito>1.8.5</version.mockito>
         <version.osgi>5.0.0</version.osgi>
