--- a/pom.xml
+++ b/pom.xml
@@ -25,14 +25,14 @@
     <artifactId>jbosgi-deployment</artifactId>
     <packaging>jar</packaging>
 
-    <version>2.0.0.Final</version>
+    <version>2.0.1.Final-SNAPSHOT</version>
 
     <!-- Source Control -->
     <scm>
         <connection>scm:git:git://github.com/jbosgi/jbosgi-deployment.git</connection>
         <developerConnection>scm:git:git@github.com:jbosgi/jbosgi-deployment.git</developerConnection>
         <url>http://github.com/jbosgi/jbosgi-deployment</url>
-      <tag>2.0.0.Final</tag>
+      <tag>HEAD</tag>
   </scm>
 
     <!-- Properties -->
