--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,7 @@
 <!--                                                                        -->
 <!-- ====================================================================== -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <!-- Parent -->
@@ -26,14 +25,14 @@
     <artifactId>jbosgi-deployment</artifactId>
     <packaging>jar</packaging>
 
-    <version>2.0.1.Final-SNAPSHOT</version>
+    <version>2.0.1.Final</version>
 
     <!-- Source Control -->
     <scm>
         <connection>scm:git:git://github.com/jbosgi/jbosgi-deployment.git</connection>
         <developerConnection>scm:git:git@github.com:jbosgi/jbosgi-deployment.git</developerConnection>
         <url>http://github.com/jbosgi/jbosgi-deployment</url>
-        <tag>HEAD</tag>
+        <tag>2.0.1.Final</tag>
     </scm>
 
     <!-- Properties -->
