Add VFS into testing dependencies

--- a/pom.xml
+++ b/pom.xml
@@ -37,8 +37,8 @@
 
     <!-- Properties -->
     <properties>
-        <version.jboss.osgi.spi>4.0.2.Final</version.jboss.osgi.spi>
-        <version.jboss.osgi.testing>2.0.2.Final</version.jboss.osgi.testing>
+        <version.jboss.osgi.spi>4.0.3.Final</version.jboss.osgi.spi>
+        <version.jboss.osgi.testing>2.0.3.Final</version.jboss.osgi.testing>
     </properties>
 
     <!-- Dependencies -->
@@ -71,6 +71,11 @@
             <groupId>org.jboss.osgi.testing</groupId>
             <artifactId>jbosgi-testing</artifactId>
             <version>${version.jboss.osgi.testing}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss</groupId>
+            <artifactId>jboss-vfs</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
