--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
     <parent>
         <groupId>org.jboss.osgi</groupId>
         <artifactId>jbosgi-parent</artifactId>
-        <version>1.0.28</version>
+        <version>2.0.1-SNAPSHOT</version>
     </parent>
 
     <name>JBossOSGi Deployment</name>
@@ -25,7 +25,7 @@
     <artifactId>jbosgi-deployment</artifactId>
     <packaging>jar</packaging>
 
-    <version>2.0.4.Final-SNAPSHOT</version>
+    <version>3.0.1.Final-SNAPSHOT</version>
 
     <!-- Source Control -->
     <scm>
@@ -37,8 +37,8 @@
 
     <!-- Properties -->
     <properties>
-        <version.jboss.osgi.spi>4.0.3.Final</version.jboss.osgi.spi>
-        <version.jboss.osgi.testing>2.0.3.Final</version.jboss.osgi.testing>
+        <version.jboss.osgi.spi>5.0.1.Final-SNAPSHOT</version.jboss.osgi.spi>
+        <version.jboss.osgi.testing>3.0.1.Final-SNAPSHOT</version.jboss.osgi.testing>
     </properties>
 
     <!-- Dependencies -->
