--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
     <parent>
         <groupId>org.jboss.osgi</groupId>
         <artifactId>jbosgi-parent</artifactId>
-        <version>2.0.1-SNAPSHOT</version>
+        <version>2.0.1</version>
     </parent>
 
     <name>JBossOSGi Deployment</name>
@@ -37,8 +37,8 @@
 
     <!-- Properties -->
     <properties>
-        <version.jboss.osgi.spi>5.0.1.Final-SNAPSHOT</version.jboss.osgi.spi>
-        <version.jboss.osgi.testing>3.0.1.Final-SNAPSHOT</version.jboss.osgi.testing>
+        <version.jboss.osgi.spi>5.0.1.Final</version.jboss.osgi.spi>
+        <version.jboss.osgi.testing>3.0.1.Final</version.jboss.osgi.testing>
     </properties>
 
     <!-- Dependencies -->
